       (Stefan Fuhrmann)
- BUG: Issue #385: Log cache not filled after REPLACE.
       (Stefan Fuhrmann)
- BUG: Issue #386: double entries in log dialog
       after "next 100". (Stefan)
- BUG: Issue #388: Wrong/duplicate info in the
       explorer Subversion properties tab. (Stefan)
- BUG: Issue #389: Blame using the wrong pegrev.
       (Stefan Fuhrmann)

Version 1.7.7
- BUG: Issue #233: Crash when closing the
       progress dialog. (Stefan)
- BUG: Issue #234: Crash in
       repo browser. (Stefan)
- BUG: Issue #235: Crash when reverting/deleting
       items from the status list control. (Stefan)
- BUG: Issue #236: link-style buttons in commit
       dialog register on non-captured mouseup. (Stefan)
- BUG: Issue #237: crash with invalid
       config file. (Stefan)
- BUG: Issue #238: crash on doubleclick
       in TMerge. (Stefan)
- BUG: Issue #239: crash when entering new
       lines in invalid views. (Stefan)
- BUG: Issue #240: Cancelling revert/resolve
       dialogs can crash. (Stefan)
- BUG: Issue #241: crash when closing app
       using sasl authentication. (Stefan)
- BUG: Issue #242: crash when
       authenticating. (Stefan)
- BUG: Issue #243: deleting rev-selecting log
       dialog can cause a crash. (Stefan)
- BUG: Issue #244: Crash with hotkeys in
       TortoiseMerge. (Stefan)
- BUG: Issue #245: progress dlg can be closed
       while threads are running. (Stefan)
- BUG: Issue #246: crash in file
       diff dialog. (Stefan)
- BUG: Issue #247: crash when reading
       properties fails. (Stefan)
- BUG: Issue #248: division-by-zero with empty
       file in TMerge. (Stefan)
- BUG: Issue #249: invalid file crashes
       TortoiseBlame. (Stefan)
- BUG: Issue #250: invalid icon files crash
       TortoiseIDiff. (Stefan)
- BUG: Issue #251: uncaught exception when editing
       log messages or authors. (Stefan)
- BUG: Issue #252: Repo browser list control is
       not thread safe. (Stefan)
- BUG: Issue #253: Cancelling out of the repo