@@ -120,6 +120,8 @@ Version 1.7.8
        explorer Subversion properties tab. (Stefan)
 - BUG: Issue #389: Blame using the wrong pegrev.
        (Stefan Fuhrmann)
+- BUG: Issue #393: Crash when dragging files
+       with long paths. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
